--- a/test/fixtures/groups.yml
+++ b/test/fixtures/groups.yml
@@ -9,6 +9,10 @@
 #  updated_at :datetime         not null
 #  owner_id   :integer          not null
 #
+# Indexes
+#
+#  index_groups_on_name  (name) UNIQUE
+#
 
 # This model initially had no columns defined. If you add columns to the
 # model remove the '{}' from the fixture names and add the columns immediately
